--- a/app/src/main/res/layout/activity_epub_demo.xml
+++ b/app/src/main/res/layout/activity_epub_demo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EPubDemo">
+    tools:context=".reader.EPubDemo">
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
